<resources>
    <string name="app_name">Виртуальные спорты</string>
    <string name="password_input_text">Пароль</string>
    <string name="mail_input_text">Эл. почта</string>
    <string name="register_btn_text">Регистрация</string>
    <string name="login_button_text">Вход</string>
    <string name="close_button_image_description">Кнопка "Закрыть"</string>
    <string name="login_text">Вход</string>
    <string name="register_text">Регистрация</string>
    <string name="repeat_password_input_text">Повторите пароль</string>
    <string name="min_mail_length_error">Минимальная длина эл. почты %1$s</string>
    <string name="min_password_length_error">Минимальная длина пароля %1$s</string>
    <string name="max_mail_length_error">Максимальная длина эл. почты %1$s</string>
    <string name="max_password_length_error">Максимальная длина пароля %1$s</string>
    <string name="not_same_password_error">Пароли не совпадают</string>
    <string name="incorrect_mail_error">Некорректный адрес эл. почты</string>
    <string name="empty_mail_error">Эл. почта не может быть пустой</string>
    <string name="empty_password_error">Пароль не может быть пустым</string>
    <string name="mail_error_message_text">Неверно указана почта или пароль</string>
    <string name="logout_button_text">Выход</string>
    <string name="signup_button_text">Регистрация</string>
    <string name="filters_button_text">Фильтры</string>
    <string name="top_games_title">Топ</string>
    <string name="all_games_title">Все игры</string>
    <string name="no_internet_error_text">Подключение к интернету отсутствует</string>
    <string name="retry_btn_text">Обновить</string>
    <string name="image_no_internet_text_description">Картинка "Нет интернета"</string>
    <string name="search_results_title">Результаты поиска</string>
    <string name="not_found_message">Не найдено…</string>
    <string name="need_login_error_message">Для доступа необходимо пройти авторизацию</string>
    <string name="filters_title_text">Фильтры</string>
    <string name="providers_title_text">Провайдеры</string>
    <string name="apply_button_text">Применить</string>
    <string name="roll_the_dice_button_text">ПОДБРОСИТЬ! </string>
    <string name="dice_game_roll_result_text_start">Исход: </string>
    <string name="dice_game_roll_result_text">Исход: %1$d - %2$s</string>
    <string name="back_button_description">Кнопка "назад"</string>
    <string name="dice_game_title">Игра "Кости" </string>
    <string name="added_to_favourites_button_description">Иконка "Добавлено в избранное"</string>
    <string name="add_to_favourites_button_description">Иконка "Добавить в избранное"</string>
    <string name="tv_place_your_bet_text">Сделайте Вашу ставку (одиночный выбор) </string>
    <string name="button_bet_history_text">История ставок </string>
    <string name="radio_button_odd_text">Нечет </string>
    <string name="radio_button_even_text">Чет </string>
    <string name="dice_game_last_100_bets_text">Последние 100 ставок </string>
    <string name="bet_history_item_id">#%s </string>
    <string name="bet_history_item_bet_title">Ставка </string>
    <string name="bet_history_item_result_title">Исход </string>
    <string name="bet_history_item_bet_value">%d </string>
    <string name="bet_history_item_bet_result_value">%1$d - %2$s </string>
    <string name="bet_history_item_bet_outcome">Победа/Поражение </string>
    <string name="game_title">Название Игры </string>
    <string name="change_favorite_game_text">Ошибка при изменении списка избранного</string>
    <string name="bet_history_bet_datetime">датавремя</string>
    <string name="win">ПОБЕДА </string>
    <string name="lose">ПОРАЖЕНИЕ </string>
    <string name="user_exist_registration_error_text">Данный пользователь уже зарегистрирован</string>
    <string name="inputs_registration_error_text">Вы ввели неверные значения</string>
    <string name="unknown_registration_error_text">Неизвестная ошибка</string>
    <string name="network_error_text">Ошибка сети</string>
    <string name="inputs_login_error_text">Вы ввели неверные значения</string>
    <string name="user_not_found_login_error_text">Неверная эл. почта или пароль</string>
    <string name="unknown_login_error_text">Неизвестная ошибка</string>
    <string name="dice_game_start_button">Кнопка "Запустить игру Кости"</string>
    <string name="unknown_error_text">Неизвестная ошибка</string>
    <string name="favourites_category_name">Избранные</string>
    <string name="recently_launched_category_name">Недавно запущенные</string>
    <string name="need_authorization_error_text">Нужна авторизация</string>
    <string name="logo">Лого</string>
    <string name="clear_filters">CLEAR</string>
</resources>
