<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_light_eb"
        android:gravity="center"
        android:minHeight="@dimen/login_top_panel_min_height"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/close_button_image_description"
            android:padding="@dimen/login_half_all_padding_elements"
            android:src="@drawable/ic_close_dark" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/login_half_margin_elements"
            android:gravity="center"
            android:text="@string/login_text"
            android:textColor="@color/black"
            android:textSize="@dimen/login_header_text_size"
            app:fontFamily="@font/parimatch" />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_margin_elements"
        android:hint="@string/mail_input_text"
        android:textColorHint="@color/gray_light_9e"
        app:boxBackgroundColor="@color/transparent"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/gray_light_9e">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="text"
            android:paddingStart="@dimen/zero_dp"
            android:paddingEnd="@dimen/zero_dp"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="@dimen/edit_text_font_size"
            app:fontFamily="@font/parimatch" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_margin_elements"
        android:layout_marginEnd="@dimen/login_margin_elements"
        android:layout_marginBottom="@dimen/login_margin_elements"
        android:hint="@string/password_input_text"
        android:textColorHint="@color/gray_light_9e"
        app:boxBackgroundColor="@color/transparent"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/gray_light_9e"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:paddingStart="@dimen/zero_dp"
            android:paddingEnd="@dimen/zero_dp"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="@dimen/edit_text_font_size"
            app:fontFamily="@font/parimatch" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_margin_elements"
        android:layout_marginEnd="@dimen/login_margin_elements"
        android:background="@color/gray_light_eb"
        android:enabled="false"
        android:padding="@dimen/login_all_padding_buttons"
        android:text="@string/login_button_text"
        android:textColor="@color/gray_light_9e"
        android:textSize="@dimen/login_btn_font_size"
        android:textStyle="bold"
        app:fontFamily="@font/parimatch" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_margin_elements"
        android:background="@drawable/btn_register_border"
        android:padding="@dimen/login_all_padding_buttons"
        android:text="@string/register_btn_text"
        android:textSize="@dimen/login_btn_font_size"
        android:textStyle="bold"
        app:fontFamily="@font/parimatch" />

    <TextView
        android:id="@+id/tv_login_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/mail_error_message_text"
        android:textColor="@color/red"
        android:textSize="@dimen/login_btn_font_size"
        android:visibility="gone"
        app:fontFamily="@font/parimatch"
        tools:visibility="visible" />

</LinearLayout>