<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_image_no_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_no_internet_text_description"
        android:minWidth="@dimen/iv_no_internet_min_size"
        android:minHeight="@dimen/iv_no_internet_min_size"
        android:src="@drawable/ic_signal_off"
        app:layout_constraintBottom_toTopOf="@id/tv_no_internet_error_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_no_internet_error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_internet_error_text"
        android:textColor="@color/black"
        android:textSize="@dimen/no_network_text_size"
        app:fontFamily="@font/parimatch"
        app:layout_constraintBottom_toTopOf="@id/btn_retry"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btn_retry_margin"
        android:background="@color/bright_yellow_13"
        android:paddingHorizontal="@dimen/btn_retry_padding_horizontal"
        android:text="@string/retry_btn_text"
        android:textColor="@color/black"
        android:textSize="@dimen/btn_retry_text_size"
        app:fontFamily="@font/parimatch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_no_internet_error_text" />


</androidx.constraintlayout.widget.ConstraintLayout>