<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFiltersTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/filters_title_margin"
        android:fontFamily="@font/roboto_condensed"
        android:text="@string/filters_title_text"
        android:textColor="@color/white"
        android:textSize="@dimen/filters_title_textSize"
        app:fontFamily="@font/parimatch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/close_btn_filter_padding"
        android:src="@drawable/ic_close_light"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tvFiltersTitle, ivClose" />

    <FrameLayout
        android:id="@+id/filtersBorder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/border_height"
        android:layout_marginTop="@dimen/filters_border_marginTop"
        android:background="@color/gray_dark_57"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFilters"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnClearAll"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filtersBorder" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnApply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/bright_yellow_13"
        android:fontFamily="@font/roboto_condensed"
        android:padding="@dimen/apply_button_padding"
        android:text="@string/apply_button_text"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:visibility="gone"
        app:fontFamily="@font/parimatch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnClearAll" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnClearAll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fontFamily="@font/roboto_condensed"
        android:padding="@dimen/apply_button_padding"
        android:text="@string/clear_filters"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:visibility="visible"
        app:fontFamily="@font/parimatch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnApply"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivError"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_pm_sorry"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>